k8s-challenge/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: web
spec: {}
status: {}
