k8s-challenge/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: poi
  name: poi
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  strategy: {}
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - image: registrysub5559.azurecr.io/tripinsights/poi:1.0
        name: poi
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
          - name: secrets-store-inline
            mountPath: "/secrets"
            readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: aks-akv-team3
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: poi
  name: poi-svc
  namespace: api
spec:
  selector:
    app: poi
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
