k8s-challenge/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trips
  name: trips
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  strategy: {}
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - image: registrysub5559.azurecr.io/tripinsights/trips:1.0
        name: trips
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
          - name: secrets-store-inline
            mountPath: "/secrets"
            readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: aks-akv-team3

status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trips
  name: trips-svc
  namespace: api
spec:
  selector:
    app: trips
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
