k8s-challenge/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tripviewer
  name: tripviewer
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  strategy: {}
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - image: registrysub5559.azurecr.io/tripinsights/tripviewer:1.0
        name: tripviewer
        ports:
        - containerPort: 80
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tripviewer
  name: tripviewer-svc
  namespace: web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tripviewer
  type: LoadBalancer
