k8s-challenge/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: userprofile
  name: userprofile
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  strategy: {}
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - image: registrysub5559.azurecr.io/tripinsights/userprofile:1.0
        name: userprofile
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
          - name: secrets-store-inline
            mountPath: "/secrets"
            readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: aks-akv-team3
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: userprofile
  name: userprofile-svc
  namespace: api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: userprofile
