k8s-challenge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: trips-svc
            port:
              number: 80
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poi-svc
            port: 
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: user-java-svc
            port: 
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: userprofile-svc
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
       paths:
       - path: /(.*)
         pathType: Prefix
         backend:
           service:
             name: tripviewer-svc
             port:
               number: 80
